@@ -22,18 +22,20 @@ fi
 
 start() {
     /bin/echo "Starting libvirtd_exporter..."
-    eval ${PWATCHER} ${LIBVIRTD_EXPORTER} ${USER_OPTS} || exit 1
+    eval ${PWATCHER} \"\" ${LIBVIRTD_EXPORTER_LOCK} \
+        ${LIBVIRTD_EXPORTER} ${USER_OPTS} || exit 1
+    # The pwatcher script creates the lock file
 }
 
 stop() {
     /bin/echo "Stopping libvirtd_exporter..."
     # Stop the pwatcher process that is monitoring this script and it will stop
-    pwatcher_pids=$(/usr/bin/pidof -x -o %PPID $(basename ${PWATCHER}))
+    pwatcher_pids=$(/usr/bin/pidof -x -o %PPID "$(basename ${PWATCHER})")
     for pwatcher_pid in ${pwatcher_pids}; do
         if grep -q "${LIBVIRTD_EXPORTER}" "/proc/${pwatcher_pid}/cmdline"; then
-            /usr/bin/kill -TERM ${pwatcher_pid}
-            wait_for_pid_stop ${pwatcher_pid}
-            exit 0
+            /usr/bin/kill -TERM "${pwatcher_pid}"
+            wait_for_pid_stop "${pwatcher_pid}" && \
+                /bin/rm -f ${LIBVIRTD_EXPORTER_LOCK}
         fi
     done
 }
